# rust-compression

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js
compression/: all.html  index.html  sidebar-items.js
compression/action/: enum.Action.html
compression/bzip2/decoder/: struct.BZip2Decoder.html
compression/bzip2/encoder/: struct.BZip2Encoder.html
compression/bzip2/error/: enum.BZip2Error.html
compression/deflate/decoder/: struct.Deflater.html
compression/deflate/encoder/: struct.Inflater.html
compression/error/: enum.CompressionError.html
compression/gzip/decoder/: struct.GZipDecoder.html
compression/gzip/encoder/: struct.GZipEncoder.html
compression/lzhuf/: enum.LzhufMethod.html
compression/lzhuf/decoder/: struct.LzhufDecoder.html
compression/lzhuf/encoder/: struct.LzhufEncoder.html
compression/lzss/: enum.LzssCode.html
compression/lzss/decoder/: struct.LzssDecoder.html
compression/lzss/encoder/: struct.LzssEncoder.html
compression/prelude/: enum.Action.html  enum.BZip2Error.html  enum.CompressionError.html  enum.LzhufMethod.html  enum.LzssCode.html  index.html  sidebar-items.js  struct.BZip2Decoder.html  struct.BZip2Encoder.html  struct.DecodeIterator.html  struct.Deflater.html  struct.EncodeIterator.html  struct.GZipDecoder.html  struct.GZipEncoder.html  struct.Inflater.html  struct.LzhufDecoder.html  struct.LzhufEncoder.html  struct.LzssDecoder.html  struct.LzssEncoder.html  struct.ZlibDecoder.html  struct.ZlibEncoder.html  trait.DecodeExt.html  trait.Decoder.html  trait.EncodeExt.html  trait.Encoder.html
compression/traits/decoder/: struct.DecodeIterator.html  trait.DecodeExt.html  trait.Decoder.html
compression/traits/encoder/: struct.EncodeIterator.html  trait.EncodeExt.html  trait.Encoder.html
data/: sample4.bz2  sample4.ref  sample5.ref  sample6.ref  sample7.ref
src/: action.rs  adler32.rs  bit_reader.rs  bit_vector.rs  bit_writer.rs  bitset.rs  bucket_sort.rs  cbuffer.rs  compress.rs  crc32.rs  decompress.rs  error.rs  huffman_decoder.rs  huffman_encoder.rs  io_queue.rs  lib.rs  lzhuf_compress.rs  lzhuf_compression.rs  lzhuf_decompress.rs  read.rs  write.rs  xxhash.rs
src/bitio/: mod.rs  reader.rs  small_bit_vec.rs  writer.rs
src/bzip2/: decoder.rs  encoder.rs  error.rs  mod.rs  mtf.rs
src/compression/: action.rs.html  adler32.rs.html  bitset.rs.html  bucket_sort.rs.html  cbuffer.rs.html  crc32.rs.html  error.rs.html  lib.rs.html
src/deflate/: decoder.rs  encoder.rs  mod.rs
src/gzip/: decoder.rs  encoder.rs  mod.rs
src/huffman/: cano_huff_table.rs  decoder.rs  encoder.rs  mod.rs
src/internal/: bucket_sort.rs  cano_huff_table.rs  circular_buffer.rs  lzhuf_decoder.rs  lzhuf_encoder.rs  lzss_decoder.rs  lzss_encoder.rs  mod.rs
src/lz4/: decoder.rs  encoder.rs  mod.rs
src/lzhuf/: decoder.rs  encoder.rs  mod.rs
src/lzss/: decoder.rs  encoder.rs  mod.rs  slidedict.rs
src/suffix_array/: bucket.rs  ls_type.rs  mod.rs  sais.rs
src/traits/: decoder.rs  encoder.rs  mod.rs
src/zlib/: decoder.rs  encoder.rs  mod.rs
(+61 files in other folders)
