[package]
name = "compression"
version = "0.1.0"
authors = ["Mitsuharu Seki <mitsu1986@gmail.com>"]
repository = "https://github.com/chalharu/rust-compression"
keywords = ["compress", "gzip", "flate", "deflate", "bzip2", "lzh"]
license = "MPL-2.0"
readme = "README.md"
description = "Compression libraries implemented by pure Rust."
documentation = "https://docs.rs/rust-compression/"

[lib]
name = "compression"
bench = false
test = true

[dependencies]
num-traits = ">=0.0.0"
num-iter = ">=0.0.0"
clippy = { version = ">=0.0.0", optional = true }

[dev-dependencies]
rand = ">=0.0.0"

[features]
docs = []
lint = [ "clippy" ]

[badges]
travis-ci = { repository = "chalharu/rust-compression" }

[package.metadata.docs.rs]
features = ["docs"]
