[package]
name = "compression"
version = "0.1.5"
authors = ["Mitsuharu Seki <mitsu1986@gmail.com>"]
repository = "https://github.com/chalharu/rust-compression"
keywords = ["compress", "gzip", "deflate", "bzip2", "no_std"]
license = "MPL-2.0"
readme = "README.md"
description = "Compression libraries implemented by pure Rust."
documentation = "https://docs.rs/rust-compression/"
edition = '2018'

[lib]
name = "compression"
bench = false
test = true

[dependencies]
num-traits = { version = ">=0.2.0", default-features = false }
lazy_static = ">0.0.0"
log = { version = ">=0.0.0", default-features = false }
cfg-if = ">0.0.0"

[dev-dependencies]
simple_logger = { version = ">=0.0.0" }
rand = ">=0.6.5"

[features]
default = [ "std", "bzip2", "gzip", "deflate", "zlib", "lzss" ]
all = [ "bzip2", "gzip", "deflate", "zlib", "lzhuf", "lzss" ]
bzip2 = [ ]
lzhuf = [ "lzss" ]
gzip = [ "deflate" ]
deflate = [ "lzss" ]
zlib = [ "deflate" ]
lzss = [ ]
std = [ ]
docs = [ "all" ]

[badges]
travis-ci = { repository = "chalharu/rust-compression" }

[package.metadata.docs.rs]
features = ["docs"]
